--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,17 +1,7 @@
-.form {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-}
-
-.button {
-  border: 1px solid #eee;
-  padding: 10px 30px;
-  border-radius: 10px;
-  cursor: pointer;
+.homePage {
+  padding: 100px 0;
 }
 
 .list {
   margin-top: 50px;
-  padding: 0 30px;
 }
