--- a/src/components/Suggest/Suggest.module.scss
+++ b/src/components/Suggest/Suggest.module.scss
@@ -1,13 +1,28 @@
+.wrapper {
+  position: relative;
+  flex-grow: 1;
+}
+
 .input {
   padding: 15px;
   font: inherit;
   font-size: 18px;
+  display: block;
+  width: 100%;
+  border: 1px solid #eee;
+  border-radius: 10px;
 }
 
 .suggestList {
   list-style: none;
   margin: 0;
   padding: 0;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #eee;
+  border-radius: 5px;
 }
 
 .suggest {
